@@ -1,7 +1,8 @@
 #!/bin/sh
 rm -f 1
 touch 1
-for i in . console gnome-console cats dird filed filed/win32 win32 findlib lib stored tools; do
+for i in . console gnome-console cats dird filed filed/win32 \
+     win32 win32/compat findlib lib wx-console stored tools; do
   ls -1 $i/*.c $i/*.cpp $i/*.h $i/*.in 2>/dev/null >>1
 done
 cat 1 | $HOME/bin/lines
